--- a/templates/index.j2
+++ b/templates/index.j2
@@ -3,6 +3,7 @@
 <head><title>Bリーグ日程 ical配布</title></head>
 <body>
 <p>バスケットボール Bリーグの日程表を予定表に取り込める形式に変換して提供しています。</p>
+<p>バグ報告、コメント等は<a href="http://github.com/wtnb75/bleague">wtnb75/bleague @ github</a>にissue/PRをどうぞ。</p>
 {% for league in data.keys()|sort %}
 <h1>{{league}}</h1>
 <ul>
